--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hippodromo BH Anos 90</title>
+    <title>Só as Brabas</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="player">
-      <h4><i class="material-icons">equalizer</i>Só as Brabas</h4>
+      <h4><i class="material-icons">equalizer</i>Hippodromo BH Anos 90</h4>
       <div class="card">
         <div class="card-image">
           <a href="#" class="btn-floating btn-large halfway-fab">
