--- a/index.html
+++ b/index.html
@@ -18,11 +18,27 @@
         <div class="card-content">
           <h5>Title</h5>
           <p class="artist">Artist</p>
+          <div>
+            <ul class="avaliacao">
+              <li class="star-icon ativo" data-avaliacao="1"></li>
+              <li class="star-icon" data-avaliacao="2"></li>
+              <li class="star-icon" data-avaliacao="3"></li>
+              <li class="star-icon" data-avaliacao="4"></li>
+              <li class="star-icon" data-avaliacao="5"></li>
+              <li class="star-icon" data-avaliacao="6"></li>
+              <li class="star-icon" data-avaliacao="7"></li>
+              <li class="star-icon" data-avaliacao="8"></li>
+              <li class="star-icon" data-avaliacao="9"></li>
+              <li class="star-icon" data-avaliacao="10"></li>
+              <li class="star-icon" data-avaliacao="11"></li>
+            </ul>
+          </div>
           <div class="row valign-wrapper" id="player-controls">
             <div class="col s2" id="current-duration">00:00</div>
             <div class="col s6 range-field valign-wrapper">
               <input type="range" min="0" max="0" id="seekbar" step="1" />
             </div>
+            
             <div class="col s2" id="total-duration">00:00</div>
             <div>
               <a href="#">
