--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="player">
-      <h4><i class="material-icons">equalizer</i>Hippodromo BH Anos 90</h4>
+      <h4><i class="material-icons">equalizer</i>HippoDromo BH Anos 90</h4>
       <div class="card">
         <div class="card-image">
           <a href="#" class="btn-floating btn-large halfway-fab">
