--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Só as Brabas</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="border.css">
   </head>
   <body>
     <div id="player">
