--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="border.css">
   </head>
   <body>
-    <div class="tela">
+    <div >
       <span></span>
       <span></span>
       <span></span>
       <span></span>
     </div>
     
-    <div id="player">      
+    <div class="tela" id="player">      
       <h4><i class="material-icons">equalizer</i>HippoDromo BH Anos 90</h4>
       <div class="card">
       <div class="card-image">
