--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="border.css">
   </head>
   <body>
+    <div class="indice"></div>
     <div >
       <span></span>
       <span></span>
