--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="border.css">
   </head>
   <body>
-    <div class="indice"></div>
+    <!-- <div class="indice"></div>
     <div >
       <span></span>
       <span></span>
       <span></span>
       <span></span>
-    </div>
+    </div> -->
     
     <div class="tela" id="player">      
       <h4><i class="material-icons">equalizer</i>HippoDromo BH Anos 90</h4>
