--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span></span>
     </div> -->
     
-    <div class="tela" id="player">      
+    <div id="player">      
       <h4><i class="material-icons">equalizer</i>HippoDromo BH Anos 90</h4>
       <div class="card">
       <div class="card-image">
