--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Somente as Brabas</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="border.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/border.css">
   </head>
   <body>
     <!-- <div class="indice"></div>
@@ -60,6 +60,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js" type="module"></script>
+    <script src="./assets/js/index.js" type="module"></script>
   </body>
 </html>
