--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Só as Brabas</title>
+    <title>Só as Brabas!</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/border.css">
   </head>
@@ -60,6 +60,6 @@
         </div>
       </div>
     </div>
-    <script src="./assets/js/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
