--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Só as Brabas</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/border.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <!-- <div class="indice"></div>
-    <div >
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-    </div> -->
-    
+  <body>    
     <div id="player">      
       <h4><i class="material-icons">equalizer</i>HippoDromo BH Anos 90</h4>
       <div class="card">
