--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
     </div>
 
     <!-- Lado direito (anúncio) -->
-    <div class="sidebar">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-0610793785321752"
-           data-ad-slot="5614847158"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-  </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610793785321752"
+     crossorigin="anonymous"></script>
+<!-- Bloco direito anos 90 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-0610793785321752"
+     data-ad-slot="7750890051"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <script src="index.js" type="module"></script>
 </body>
