--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>Só as Brabas</title>
   <link rel="stylesheet" href="style.css" />
   
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610793785321752"
-    crossorigin="anonymous"></script>
+ <!-- Google Ads -->
+    <meta name="google-adsense-account" content="ca-pub-0610793785321752">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610793785321752"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
