--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+  content="O melhor do underground que tocou nas danceterias de Belo Horizonte e São Paulo na década de 90 
+  e início dos anos 2000.">
   <title>Só as Brabas</title>
   <link rel="stylesheet" href="style.css" />
   
